# interpboard

./: .gitignore  LICENSE  MANIFEST.in  README.md  deploy.sh  gpt2_demo.py  pyproject.toml  requirements-minimal.txt  requirements.txt  setup.py
docs/: deployment.md  pypi_deployment.md  supported_models.md  usecases.md
examples/: gpt2_comprehensive_example.ipynb  minimal_demo.py  model_bias.py  quick_start.py
interpboard/: __init__.py  cli.py  config.py  utils.py
interpboard/attribution/: __init__.py  attention_rollout.py  gradients.py  viz.py
interpboard/circuits/: __init__.py  head_ablation.py  logit_lens.py  neuron_analysis.py
interpboard/dashboards/: __init__.py
interpboard/patching/: __init__.py  activ_patch.py  causal_tracing.py  utils.py
interpboard/visualization/: __init__.py  heatmap.py  text_overlay.py
interpboard/visualization/styles/: default.css
