[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interpboard"
version = "0.1.0"
authors = [
    {name = "Sohan Venkatesh", email = "soh.venkatesh@gmail.com"}
]
description = "A comprehensive toolkit for interpreting and understanding large language models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "machine-learning",
    "interpretability",
    "transformers",
    "llm",
    "visualization",
    "mechanistic-interpretability",
    "attention-analysis",
    "gradient-attribution",
]
dependencies = [
    # Core ML dependencies
    "torch>=1.13.0",
    "transformers>=4.20.0",
    "numpy>=1.21.0",
    
    # Visualization
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    
    # Text processing and display
    "rich>=12.0.0",
    "termcolor>=1.1.0",
    
    # Data handling
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    
    # Utils
    "tqdm>=4.62.0",
    "einops>=0.6.0",
]

[project.optional-dependencies]
web = [
    "streamlit>=1.20.0",
    "gradio>=3.0.0",
]
jupyter = [
    "ipywidgets>=7.6.0",
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
    "isort>=5.10.0",
    "ruff>=0.0.261",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.17.0",
    "sphinxcontrib-napoleon>=0.7",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-mock>=3.6.0",
    "hypothesis>=6.0.0",
]
performance = [
    "accelerate>=0.20.0",
    "deepspeed>=0.9.0",
]
all = [
    "interpboard[web,jupyter,dev,docs,test,performance]"
]

[project.urls]
Homepage = "https://github.com/sohv/interpboard"
Documentation = "https://github.com/sohv/interpboard/blob/main/README.md"
Repository = "https://github.com/sohv/interpboard.git"
"Bug Tracker" = "https://github.com/sohv/interpboard/issues"
Changelog = "https://github.com/sohv/interpboard/blob/main/CHANGELOG.md"

[project.scripts]
interpboard = "interpboard.cli:main"

[tool.setuptools]
packages = ["interpboard"]

[tool.setuptools.package-data]
interpboard = [
    "visualization/styles/*.css",
    "dashboards/templates/*.html",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["interpboard"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "rich.*",
    "termcolor.*",
    "scipy.*",
    "einops.*",
    "streamlit.*",
    "gradio.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=interpboard",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
]

[tool.coverage.run]
source = ["interpboard"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101", "B601"]